Remove paragraph from willpower

--- a/willpower/chapter1.tex
+++ b/willpower/chapter1.tex
@@ -32,9 +32,9 @@
 \subsection*{Павысіць узровень энэргіі, разумовую і фізычную працаздольнасьць.} 
 Сёньня многія прыходзяць да мяне па здароўе, але называюць яго інакш~--- энэргіяй. Такі запыт узьнікае, калі чалавек пачуваецца добра, але сутыкаецца з~падвышанай нагрузкай. Часта людзі адмаўляюцца ад пэрспэктыўнай працы ці пашырэньня бізнэсу з~прычыны стомленасьці, выгараньня. Іх звыклы ўзровень здароўя недастатковы, і каб адаптавацца да новых патрэбаў і ня выгараць, трэба павялічваць «запас здароўя». Не ахвяруйце здароўем дзеля працы, умацоўвайце здароўе і працуйце з~задавальненьнем! Упэўнены, што мацнейшае здароўе забясьпечыць вам і высокую працаздольнасьць без выгараньня.
 
-\paragraph{Добрая навіна: такая неадаптыўнасьць не канчатковая, гэты навык трэніруецца і разьвіваецца.} Здароўе становіцца суперсілай, бо чым большы ваш адаптыўны рэсурс, тым больш вы можаце зрабіць і тым «вышэй скокнуць». Тое, што ў~слабога чалавека зь нізкім узроўнем энэргіі выкліча стому, чалавека з~высокім узроўнем энэргіі ня спыніць. Чым вы энэргічнейшы, тым лягчэй атрымліваеце тое, чаго хочаце. Многія ўжо зразумелі, што галоўная каштоўнасьць~--- гэта ня час, а~менавіта энэргія: любое адхіленьне ад оптымуму вядзе да зьніжэньня рэсурсаў здароўя і энэргічнасьці. Калі наш арганізм толькі мяркуе магчымы дэфіцыт сілаў, пагрозу свайму стану, ён на аўтапілёце пераходзіць у~«рэжым эканоміі».
+\textbf{Добрая навіна: такая неадаптыўнасьць не канчатковая, гэты навык трэніруецца і разьвіваецца.} Здароўе становіцца суперсілай, бо чым большы ваш адаптыўны рэсурс, тым больш вы можаце зрабіць і тым «вышэй скокнуць». Тое, што ў~слабога чалавека зь нізкім узроўнем энэргіі выкліча стому, чалавека з~высокім узроўнем энэргіі ня спыніць. Чым вы энэргічнейшы, тым лягчэй атрымліваеце тое, чаго хочаце. Многія ўжо зразумелі, што галоўная каштоўнасьць~--- гэта ня час, а~менавіта энэргія: любое адхіленьне ад оптымуму вядзе да зьніжэньня рэсурсаў здароўя і энэргічнасьці. Калі наш арганізм толькі мяркуе магчымы дэфіцыт сілаў, пагрозу свайму стану, ён на аўтапілёце пераходзіць у~«рэжым эканоміі».
 
-\paragraph{Менавіта багацьце рэсурсаў здароўя дазваляе нам шчодра выкарыстоўваць свае сілы і накіроўваць іх у~поўным аб'ёме на важныя задачы.} Энэргія пачынаецца з~фізычнага ўзроўню, дзе яе забясьпечваюць харчаваньне, рух, сон. З фізычнага ўзроўню яна пераходзіць на псыхалягічны, дзе рэалізуецца ў~стрэсаўстойлівасьці і ўменьні канцэнтраваць увагу. Далей, на асабістым і сацыяльным узроўнях, яна раскрываецца ўжо ў~выглядзе мэтаў, каштоўнасьцяў, сэнсаў, якія і кіруюць нашымі дзеяньнямі.
+\textbf{Менавіта багацьце рэсурсаў здароўя дазваляе нам шчодра выкарыстоўваць свае сілы і накіроўваць іх у~поўным аб'ёме на важныя задачы.} Энэргія пачынаецца з~фізычнага ўзроўню, дзе яе забясьпечваюць харчаваньне, рух, сон. З фізычнага ўзроўню яна пераходзіць на псыхалягічны, дзе рэалізуецца ў~стрэсаўстойлівасьці і ўменьні канцэнтраваць увагу. Далей, на асабістым і сацыяльным узроўнях, яна раскрываецца ўжо ў~выглядзе мэтаў, каштоўнасьцяў, сэнсаў, якія і кіруюць нашымі дзеяньнямі.
 
 \tipbox{Жаданьне стаць моцным чалавекам, нарошчваць асабістыя рэсурсы, разьвіваць здольнасьці, воля да жыцьця і да ўлады над сабой, інстынкт выжываньня й самазахаваньня~--- гэта натуральныя і здаровыя заахвочвальныя імпульсы, якія мае кожны чалавек.}
 
@@ -132,7 +132,7 @@
 
 Я часта бачу, што людзі чакаюць ад мяне чароўнай таблеткі, але ня хочуць карыстацца праверанымі эфэктыўнымі сродкамі. «Гэта вельмі проста і нудна,~--- кажуць яны,~--- а~дзе ж навука?» Прагрэс навукі спараджае ў~шматлікіх людзей чаканьне, што нейкія прэпараты ці апараты змогуць чароўнай чынам іх аздаравіць. Аднак дасюль ня вынайдзеная і наўрад ці зьявіцца ў~найбліжэйшай будучыні таблетка, якая зробіць вас стрэсаўстойлівымі і ўсьвядомленымі, худымі і мускулістымі. Таму імкніцеся ня піць таблеткі, каб быць здаровымі, а~быць здаровымі, каб ня піць таблеткі.
 
-\paragraph{Абсалютная большасьць дадаткаў не дае прыкметнага эфэкту здаровым людзям.} А вось здаровы лад жыцьця~--- працуе, робіць нас лепшымі і мацнейшымі. Менавіта сьвядомыя ўважлівыя дзеяньні стымулююць разьвіцьцё, а~не пасіўнае спажываньне «аздараўленчых» прадуктаў. Многія людзі даюць нырца ў~ЗЛЖ, але атрымліваюць толькі праблемы са здароўем. Рыба на абед больш эфэктыўная, чым Амега-3 у~капсулах; прыём вітаміну D не заменіць часу, праведзенага на сонцы; міястымулятары не разьвіваюць цягліцы, а~рэгулярныя практыкаваньні працуюць на 100\,\%.
+\textbf{Абсалютная большасьць дадаткаў не дае прыкметнага эфэкту здаровым людзям.} А вось здаровы лад жыцьця~--- працуе, робіць нас лепшымі і мацнейшымі. Менавіта сьвядомыя ўважлівыя дзеяньні стымулююць разьвіцьцё, а~не пасіўнае спажываньне «аздараўленчых» прадуктаў. Многія людзі даюць нырца ў~ЗЛЖ, але атрымліваюць толькі праблемы са здароўем. Рыба на абед больш эфэктыўная, чым Амега-3 у~капсулах; прыём вітаміну D не заменіць часу, праведзенага на сонцы; міястымулятары не разьвіваюць цягліцы, а~рэгулярныя практыкаваньні працуюць на 100\,\%.
 
 На жаль, лекары і мэдычнае асяродзьдзе не пасьпяваюць за ўсплёскам масавага попыту на здаровы лад жыцьця і практычна не даюць пэўных навуковых адказаў на пытаньні менавіта прафіляктыкі, умацаваньня здароўя, больш факусуючыся на лячэньні ўжо існых захворваньняў. Гэта прывяло да зьяўленьня вялікай колькасьці інста-дактароў, аматараў і шарлятанаў.
 
@@ -152,7 +152,7 @@
 
 Існуе меркаваньне, што здароўе~--- гэта вельмі затратна, і дазволіць яго сабе могуць ня ўсе. Я зьбіраюся давесьці, што гэта ня так. Здароўе~--- гэта інвэстыцыі, а~ня траты. Рэарганізуючы свой лад жыцьця, вы будзеце атрымліваць такі прыбытак, як задавальненьне, вызвалены час і зэканомленыя выдаткі.
 
-\paragraph{Здароўе дае жыцьцё, час і энэргію, а~энэргічнасьць дае вам больш здароўя.} Сучасная навука і мэдыцына даюць нам мноства магчымасьцяў папярэдзіць і запаволіць разьвіцьцё шматлікіх хваробаў. Для таго каб стаць яшчэ здаравейшым любому здароваму чалавеку, а~хвораму~--- умацаваць сваё здароўе, не патрэбныя дарагія прэпараты або адмысловыя прыборы~--- усё неабходнае ўжо ёсьць у~вашых руках. 
+\textbf{Здароўе дае жыцьцё, час і энэргію, а~энэргічнасьць дае вам больш здароўя.} Сучасная навука і мэдыцына даюць нам мноства магчымасьцяў папярэдзіць і запаволіць разьвіцьцё шматлікіх хваробаў. Для таго каб стаць яшчэ здаравейшым любому здароваму чалавеку, а~хвораму~--- умацаваць сваё здароўе, не патрэбныя дарагія прэпараты або адмысловыя прыборы~--- усё неабходнае ўжо ёсьць у~вашых руках. 
 
 \textbf{Любы чалавек, любога ўзросту, зь любымі магчымасьцямі, у~любы час можа пачаць дзейнічаць і станавіцца здаравейшым і мацнейшым.}
 
@@ -160,7 +160,7 @@
 
 Многія людзі ўспрымаюць здароўе і аздараўленьне як нешта, што датычыцца толькі зьмяншэньня рызыкі захворваньняў. Але гэта ня так: аздараўленьне~--- гэта ня толькі зьніжэньне рызыкі, гэта неад'емны кампанэнт асабістага разьвіцьця. Гэта паляпшэньне працы нашага розуму, разьвіцьцё нашай асобы, павышэньне кагнітыўных здольнасьцяў, павелічэньне рэсурсаў, сілаў, грошай, часу, уплыву.
 
-\paragraph{Здароўе~--- гэта самаразьвіцьцё, бясконцы працэс супрацьстаяньня разбуральнаму дзеяньню часу.} Пакуль навука ня можа прапанаваць нічога прарыўнога ў~лекаваньні галоўнага ворага~--- старэньня. Выкарыстоўваючы ўсе сучасныя веды, мы можам падоўжыць сабе жыцьцё да 90+, зрабіўшы гэтыя доўгія гады~--- здаровымі. Для большага выніку добра было б выйграць у~генэтычнай лятарэі, але адваротная сытуацыя ня значыць, што трэба здавацца. Кожны год усё больш вучоных далучаюцца да барацьбы за нашае здароўе, зьяўляецца ўсё больш новых мэтадаў лекаваньня. Мы бачым прыкметны прагрэс у~шматлікіх галінах мэдыцыны: павышэньне эфэктыўнасьці лячэньня розных відаў раку, хваробаў сэрца, мозгу. Умацоўваючы здароўе і падаўжаючы жыцьцё, мы можам дачакацца моманту, калі тыя праблемы са здароўем, што сёньня ўяўляюцца невырашальнымі, могуць быць лёгка вырашаныя заўтра.
+\textbf{Здароўе~--- гэта самаразьвіцьцё, бясконцы працэс супрацьстаяньня разбуральнаму дзеяньню часу.} Пакуль навука ня можа прапанаваць нічога прарыўнога ў~лекаваньні галоўнага ворага~--- старэньня. Выкарыстоўваючы ўсе сучасныя веды, мы можам падоўжыць сабе жыцьцё да 90+, зрабіўшы гэтыя доўгія гады~--- здаровымі. Для большага выніку добра было б выйграць у~генэтычнай лятарэі, але адваротная сытуацыя ня значыць, што трэба здавацца. Кожны год усё больш вучоных далучаюцца да барацьбы за нашае здароўе, зьяўляецца ўсё больш новых мэтадаў лекаваньня. Мы бачым прыкметны прагрэс у~шматлікіх галінах мэдыцыны: павышэньне эфэктыўнасьці лячэньня розных відаў раку, хваробаў сэрца, мозгу. Умацоўваючы здароўе і падаўжаючы жыцьцё, мы можам дачакацца моманту, калі тыя праблемы са здароўем, што сёньня ўяўляюцца невырашальнымі, могуць быць лёгка вырашаныя заўтра.
 
 А пакуль здаровы лад жыцьця дапаможа зрабіць старэньне аптымальным. Бо і старэць можна высакародна, пакрываючыся пацінай, як срэбра, а~не рассыпаючыся ў~іржавую пацяруху, як бляха. Не скісаючы, як таннае віно, а~набываючы глыбокія адценьні смаку, як дарагія віны з~«патэнцыялам старэньня». 
 
@@ -343,15 +343,15 @@
 
 Важна выяўляць схільнасьці і займацца ўмацаваньнем здароўя і без наяўнасьці сымптомаў. Многія людзі, дый я ў~тым ліку, баяцца не старэньня як такога, а~памерці як асоба яшчэ да фізычнае сьмерці. Але мы можам паўплываць і на гэта!
 
-\paragraph{Рамантуйце дах, пакуль сьвеціць сонца!} Гэта слушна і ў~прамым, і ў~пераносным сэнсе~--- займайцеся сваім мозгам да зьяўленьня дэмэнцыі! Нэўрадэгенэратыўныя захворваньні небясьпечныя тым, што маюць працяглы пэрыяд схаванага разьвіцьця (латэнтная стадыя). Тым часам нэўроны гінуць, але праяваў хваробы амаль няма, і чалавек пачуваецца звычайна, бо частку функцыяў на сябе бяруць ацалелыя нэўроны. Разьвіцьцё хваробы ідзе бессымптомна.
+\textbf{Рамантуйце дах, пакуль сьвеціць сонца!} Гэта слушна і ў~прамым, і ў~пераносным сэнсе~--- займайцеся сваім мозгам да зьяўленьня дэмэнцыі! Нэўрадэгенэратыўныя захворваньні небясьпечныя тым, што маюць працяглы пэрыяд схаванага разьвіцьця (латэнтная стадыя). Тым часам нэўроны гінуць, але праяваў хваробы амаль няма, і чалавек пачуваецца звычайна, бо частку функцыяў на сябе бяруць ацалелыя нэўроны. Разьвіцьцё хваробы ідзе бессымптомна.
 
 У нашага мозгу высокі запас трываласьці, і большая частка нэўронаў можа незваротна разбурыцца да зьяўленьня першых сымптомаў. А чым больш клетак загінула, тым менш эфэктыўнымі будуць і лекавыя мерапрыемствы. 
 
 \emph{Так, пры бакавым аміятрафічным склерозе сымптомы зьяўляюцца пасьля гібелі паловы рухальных нэўронаў, а~пры хваробе Паркінсана~--- толькі калі загіне 70\,\% дафамінавых нэўронаў.}
 
-\paragraph{Вылучаюць 12 ключавых фактараў рызыкі дэмеэцыі:} малаадукаванасьць, гіпэртанія, парушэньні слыху, курэньне, атлусьценьне, дэпрэсія, адсутнасьць фізычнай актыўнасьці, дыябэт, нізкі сацыяльны кантакт, празьмернае ўжываньне алькаголю, чэрапна-мазгавыя траўмы і забруджваньне паветра. Яны адказваюць за 40\,\% усіх выпадкаў дэмэнцыі і зьяўляюцца кіраванымі. Устараненьне гэтых фактараў рызыкі прыкметна зьменшыць і рызыку нэўрадэгенэратыўных захворваньняў.
+\textbf{Вылучаюць 12 ключавых фактараў рызыкі дэмеэцыі:} малаадукаванасьць, гіпэртанія, парушэньні слыху, курэньне, атлусьценьне, дэпрэсія, адсутнасьць фізычнай актыўнасьці, дыябэт, нізкі сацыяльны кантакт, празьмернае ўжываньне алькаголю, чэрапна-мазгавыя траўмы і забруджваньне паветра. Яны адказваюць за 40\,\% усіх выпадкаў дэмэнцыі і зьяўляюцца кіраванымі. Устараненьне гэтых фактараў рызыкі прыкметна зьменшыць і рызыку нэўрадэгенэратыўных захворваньняў.
 
-\paragraph{Кантынуум здароўя~---} актуальны погляд на тэму таго, што здароўе і хвароба~--- не ўзаемавыключальныя працэсы. Нельга супрацьпастаўляць здароўе як аптымальны стан і захворваньне як абсалютную паталёгію. І хвароба, і здароўе могуць суіснаваць адначасова, мець шэраг пераходных станаў з~шырокім размахам паказьнікаў. На адным канцы гэтага кантынууму сьмерць, на другім~--- супэрідэальнае здароўе, паміж імі мноства стадый: добрае самаадчуваньне, нармальнае самаадчуваньне, нядужаньне, невялікія сымптомы, захворваньне і зьніжэньне актыўнасьці, прыкметнае зьніжэньне магчымасьцяў праз хваробу. Высокі ўзровень здароўя можа кампэнсаваць асобныя праявы захворваньняў. Здароўе і яго патэнцыял мы маем заўсёды, пакуль дыхаем. 
+\textbf{Кантынуум здароўя~---} актуальны погляд на тэму таго, што здароўе і хвароба~--- не ўзаемавыключальныя працэсы. Нельга супрацьпастаўляць здароўе як аптымальны стан і захворваньне як абсалютную паталёгію. І хвароба, і здароўе могуць суіснаваць адначасова, мець шэраг пераходных станаў з~шырокім размахам паказьнікаў. На адным канцы гэтага кантынууму сьмерць, на другім~--- супэрідэальнае здароўе, паміж імі мноства стадый: добрае самаадчуваньне, нармальнае самаадчуваньне, нядужаньне, невялікія сымптомы, захворваньне і зьніжэньне актыўнасьці, прыкметнае зьніжэньне магчымасьцяў праз хваробу. Высокі ўзровень здароўя можа кампэнсаваць асобныя праявы захворваньняў. Здароўе і яго патэнцыял мы маем заўсёды, пакуль дыхаем. 
 
 \textbf{Можна быць хворым на 10\,\% ці на 40\,\%, здаровым~--- на 5\,\% або на 60\,\%. Суадносіны і вызначаюць ваш стан.}
 
@@ -377,7 +377,7 @@
 
 Эквівалентам здароўя мы можам лічыць адаптацыю, г.~зн. здольнасьць унутраных сілаў арганізма прыстасоўвацца да вонкавых узьдзеяньняў, уключна з~сацыяльнымі, фізычнымі і эмацыйнымі выклікамі. У прыватнасьці, акадэмік Мікалай Амосаў вызначаў здароўе як «узровень функцыянальных магчымасьцяў арганізма, дыяпазон яго кампэнсаторна-адаптацыйных рэакцый у~экстрэмальных умовах, г.~зн. узровень рэзэрвовых магчымасьцяў арганізма».
 
-\paragraph{Здароўе разглядалася і як патэнцыял,} то-бок такі «стан арганізму, што дае чалавеку магчымасьць у~максымальнай ступені рэалізаваць сваю генэтычную праграму ва ўмовах сацыякультурнага быцьця пэўнага чалавека». У такім разуменьні здароўе становіцца ўмовай для самарэалізацыі, здольнасьцю дасягаць жыцьцёвыя мэты. Адэкватнасьць жыцьцёвых мэт і памкненьняў рэальным магчымасьцям таксама важнае для здароўя, а~абмежаваньне здольнасьці вырашаць свае праблемы і задачы можа лічыцца дакладнай прыкметай нездароўя.
+\textbf{Здароўе разглядалася і як патэнцыял,} то-бок такі «стан арганізму, што дае чалавеку магчымасьць у~максымальнай ступені рэалізаваць сваю генэтычную праграму ва ўмовах сацыякультурнага быцьця пэўнага чалавека». У такім разуменьні здароўе становіцца ўмовай для самарэалізацыі, здольнасьцю дасягаць жыцьцёвыя мэты. Адэкватнасьць жыцьцёвых мэт і памкненьняў рэальным магчымасьцям таксама важнае для здароўя, а~абмежаваньне здольнасьці вырашаць свае праблемы і задачы можа лічыцца дакладнай прыкметай нездароўя.
 
 \subsection*{Здароўе як каштоўнасьць і шчасьце.}
 
@@ -410,13 +410,13 @@
 
 Зразумела, шуканыя паказьнікі біямаркераў пэрсаналізаваныя менавіта для вас. А вы імкняцеся ня проста да нормы, але да оптымуму~--- да такога значэньня, якое дае мінімальную рызыку захворваньняў і забясьпечвае найбольш высокі ўзровень эфэктыўнасьці.
 
-\paragraph{Рэсурсы здароўя~---} гэта запасы, навыкі або магчымасьці, якія могуць быць скарыстаныя для адаптацыі і спрыяюць дасягненьню выніку ў~пэўных сфэрах жыцьця.
+\textbf{Рэсурсы здароўя~---} гэта запасы, навыкі або магчымасьці, якія могуць быць скарыстаныя для адаптацыі і спрыяюць дасягненьню выніку ў~пэўных сфэрах жыцьця.
 
 Здароўе практычна немагчыма назьбіраць у~запас: нельга выспацца наперад або наесьціся загадзя (за рэдкім выключэньнем: напрыклад, вітамін B\textsubscript{12} можа доўга захоўвацца ў~печані), таму ў~адносінах да рэсурсаў здароўя мы будзем казаць пра патэнцыял. Рэсурс~--- гэта вобласьць, якая паддаецца непасрэднаму ўзьдзеяньню і значна ўплывае на стан здароўя. Памятаеце, мы ўяўлялі адэпта здаровага ладу жыцьця, сьвядомасьць якога перанеслася ў~цела нездаровага чалавека?
 
-\paragraph{Чалавек, які мае разьвіты рэсурс харчаваньня,} валодае шматлікімі карыснымі навыкамі і звычкамі: ён умее плянаваць рацыён, выбірае добрыя прадукты, не пераядае фастфуду, атрымлівае ад ежы задавальненьне, умее спалучаць ежу і трэніроўкі, сочыць за ўзроўнем важных вітамінаў і мінэралаў, пэрыядычна практыкуе інтэрвальнае галаданьне і шматлікае іншае.
+\textbf{Чалавек, які мае разьвіты рэсурс харчаваньня,} валодае шматлікімі карыснымі навыкамі і звычкамі: ён умее плянаваць рацыён, выбірае добрыя прадукты, не пераядае фастфуду, атрымлівае ад ежы задавальненьне, умее спалучаць ежу і трэніроўкі, сочыць за ўзроўнем важных вітамінаў і мінэралаў, пэрыядычна практыкуе інтэрвальнае галаданьне і шматлікае іншае.
 
-\paragraph{Чалавек, які мае разьвіты рэсурс стрэсаўстойлівасьці,} валодае шматлікімі важнымі навыкамі кіраваньня сытуацыяй: умее браць яе пад кантроль, выкарыстоўваць сабе на карысьць кароткачасовы стрэс, абараняцца ад шкоднага стрэсу і аднаўляцца пасьля складаных сытуацый аптымальнымі для сябе спосабамі. Чым больш у~вас сілаў і здароўя, тым менш вы іх выдаткоўваеце ў~звычайных сытуацыях.
+\textbf{Чалавек, які мае разьвіты рэсурс стрэсаўстойлівасьці,} валодае шматлікімі важнымі навыкамі кіраваньня сытуацыяй: умее браць яе пад кантроль, выкарыстоўваць сабе на карысьць кароткачасовы стрэс, абараняцца ад шкоднага стрэсу і аднаўляцца пасьля складаных сытуацый аптымальнымі для сябе спосабамі. Чым больш у~вас сілаў і здароўя, тым менш вы іх выдаткоўваеце ў~звычайных сытуацыях.
 
 Найважнейшыя характарыстыкі рэсурсаў здароўя~--- аўтаномія і самавызначэньне, калі вы здольныя выбудоўваць свой лад жыцьця ў~адноснай свабодзе ад вонкавых і ўнутраных умоваў, незалежна ад асяродзьдзя. Немагчымасьць прытрымлівацца сваіх прыярытэтаў, неразьвітая самарэгуляцыя, як правіла, вядуць да нездаровых і нават разбуральных паводзінаў.
 
@@ -442,11 +442,11 @@
 
 Яны ня маюць адзінай прычыны і ў~цэлым зьвязаныя зь нізкім узроўнем здароўя. Фармальна чалавек можа быць яшчэ ў~норме, але любы, нават нязначны імпульс можа вывесьці яго з~раўнавагі і выклікаць хваробу.
 
-\paragraph{Пры нізкіх рэсурсах} чалавек схільны падвышанай рызыцы разьвіцьця практычна любых захворваньняў: стрэсавыя разлады, інфэкцыйныя хваробы (тое, што завецца «слабы імунітэт»), «хваробы цывілізацыі» накшталт сардэчна-сасудзістых праблемаў, мэтабалічных парушэньняў, хваробаў апорна-рухальнага апарата і г.~д. Без грунтоўнага ўмацаваньня здароўя такі пацыент будзе мяняць сьпецыялістаў і ня мець асаблівых шанцаў на радыкальнае паляпшэньне.
+\textbf{Пры нізкіх рэсурсах} чалавек схільны падвышанай рызыцы разьвіцьця практычна любых захворваньняў: стрэсавыя разлады, інфэкцыйныя хваробы (тое, што завецца «слабы імунітэт»), «хваробы цывілізацыі» накшталт сардэчна-сасудзістых праблемаў, мэтабалічных парушэньняў, хваробаў апорна-рухальнага апарата і г.~д. Без грунтоўнага ўмацаваньня здароўя такі пацыент будзе мяняць сьпецыялістаў і ня мець асаблівых шанцаў на радыкальнае паляпшэньне.
 
-\paragraph{Сярэднія рэсурсы здароўя} сьведчаць аб тым, што пры звычайным ладзе жыцьця чалавеку нічога асабліва не пагражае, але значныя перагрузкі могуць заўважна зьменшыць паказьнік рэсурсу, выклікаць хваробу і зрыў адаптацыі. 
+\textbf{Сярэднія рэсурсы здароўя} сьведчаць аб тым, што пры звычайным ладзе жыцьця чалавеку нічога асабліва не пагражае, але значныя перагрузкі могуць заўважна зьменшыць паказьнік рэсурсу, выклікаць хваробу і зрыў адаптацыі. 
 
-\paragraph{Калі рэсурс дастаткова высокі,} ёсьць надзейная падушка бясьпекі і абарона ад вонкавых пагрозаў, чалавек можа вытрымаць значныя перагрузкі і жыцьцёвыя іспыты і не захварэць.
+\textbf{Калі рэсурс дастаткова высокі,} ёсьць надзейная падушка бясьпекі і абарона ад вонкавых пагрозаў, чалавек можа вытрымаць значныя перагрузкі і жыцьцёвыя іспыты і не захварэць.
 
 Рэсурсы фізычнага, псыхалягічнага і сацыяльнага здароўя могуць быць выкарыстаны як запас жыцьцёвых магчымасьцяў~--- для далейшага разьвіцьця асобы, рэалізацыі плянаў, пераадоленьня абставінаў. \emph{Як жартуюць лекары: «Калі пацыент сапраўды хоча жыць, то мэдыцына бясьсільная».}
 
@@ -487,7 +487,7 @@
   %((карцінка: 10\% мэдыцына 20\% генэтыка 20\% экалёгія 50\% лад жыцьця))  
 % \end{figure}
 
-\paragraph{Рэсурсы здароўя мусяць адпавядаць асноўным крытэрам:} быць унівэрсальнымі для ўсіх людзей, мець надзейнае навуковае абгрунтаваньне свайго ўплыву на здароўе, быць даступнымі для самастойнай адзнакі і карэкцыі.
+\textbf{Рэсурсы здароўя мусяць адпавядаць асноўным крытэрам:} быць унівэрсальнымі для ўсіх людзей, мець надзейнае навуковае абгрунтаваньне свайго ўплыву на здароўе, быць даступнымі для самастойнай адзнакі і карэкцыі.
 
 Усе рэсурсы шчыльна зьвязаныя паміж сабой, бо памяншэньне аднаго цягне за сабой памяншэньне шэрагу іншых. Слушная і зваротная залежнасьць: пры ўмацаваньні аднаго рэсурсу ўзмацняюцца і астатнія. Напрыклад, сон залежыць і ад фізычнай актыўнасьці, і ад рэжыму харчаваньня, і ад фактараў асяродзьдзя, і ад псыхалягічных фактараў.
 
@@ -497,13 +497,13 @@
   % ((карцінка: Псыхалягічны рэсурс: стрэс, усьвядомленасьць Здароўе Сацыяльны рэсурс: статус, атачэньне Фізычны рэсурс: харчаваньне, рух, сон Асяродзьдзе: шкоднае, карыснае, лічбавае))
 % \end{figure}
 
-\paragraph{Базавымі зьяўляюцца фізычныя рэсурсы здароўя: рух, харчаваньне, сон і рэжым.} \textbf{Рух} уключае фізычную актыўнасьць любога віду (усе сытуацыі, калі вы не ляжыце, не сядзіце і не ясьце) і ўсіх разнавіднасьцяў (аэробныя, анаэробныя, зьмешаныя). А таксама цялеснасьць, гнуткасьць, цялесную адчувальнасьць, паставу і прафіляктыку траўмаў.
+\textbf{Базавымі зьяўляюцца фізычныя рэсурсы здароўя: рух, харчаваньне, сон і рэжым.} \textbf{Рух} уключае фізычную актыўнасьць любога віду (усе сытуацыі, калі вы не ляжыце, не сядзіце і не ясьце) і ўсіх разнавіднасьцяў (аэробныя, анаэробныя, зьмешаныя). А таксама цялеснасьць, гнуткасьць, цялесную адчувальнасьць, паставу і прафіляктыку траўмаў.
 \textbf{Рэсурс харчаваньня} ўключае мноства навыкаў: гэта «што», «колькі», «калі» і «як» вы ясьце. Маюць значэньне ступень апрацоўкі, рэжым харчаваньня, стараннае жаваньне і нават кампанія за сталом.
 \textbf{Сон і біярытмы}~--- ключавы рэсурс аднаўленьня: важна арганізаваць свой дзень у~аптымальны рэжым, узгадняючы рух, харчаваньне, стрэс, сьвятло, тэмпэратуру і шум. Важна сынхранізаваць усё, што мы робім, для лепшай аптымізацыі, і ўзгадніць з~натуральнай работай нашага ўнутранага гадзіньніка.
 
-\paragraph{Псыхалягічныя рэсурсы ўключаюць стрэсаўстойлівасьць і ўсьвядомленасьць.} \textbf{Устойлівасьць} мяркуе ўменьне трываць высокі ўзровень стрэсу, выбіраць найбольш эфэктыўныя і дарэчныя копінг-стратэгіі (кагнітыўныя, эмацыйныя і паводніцкія спосабы справіцца са стрэсам), а~таксама ўнутраны локус кантролю і матывацыі. \textbf{Усьвядомленасьць} уключае ў~сябе ўменьне кіраваць сваёй увагай, быць спантанным, жыць у~моманце «тут і цяпер», з~разуменьнем і ўважлівасьцю ставіцца да эмоцыяў і перажываньняў сябе і іншых людзей, умець спачуваць, любіць, суперажываць.
+\textbf{Псыхалягічныя рэсурсы ўключаюць стрэсаўстойлівасьць і ўсьвядомленасьць.} \textbf{Устойлівасьць} мяркуе ўменьне трываць высокі ўзровень стрэсу, выбіраць найбольш эфэктыўныя і дарэчныя копінг-стратэгіі (кагнітыўныя, эмацыйныя і паводніцкія спосабы справіцца са стрэсам), а~таксама ўнутраны локус кантролю і матывацыі. \textbf{Усьвядомленасьць} уключае ў~сябе ўменьне кіраваць сваёй увагай, быць спантанным, жыць у~моманце «тут і цяпер», з~разуменьнем і ўважлівасьцю ставіцца да эмоцыяў і перажываньняў сябе і іншых людзей, умець спачуваць, любіць, суперажываць.
 
-\paragraph{Сацыяльныя рэсурсы здароўя ўключаюць сацыяльны статус і сацыяльнае асяродзьдзе і ўзаемадзеяньне.} \textbf{Сацыяльны статус} складаецца з~прыбытку, прывабнасьці, адукацыі і ўплыву. \textbf{Сацыяльнае асяродзьдзе}~--- гэта людзі, якія знаходзяцца вакол вас на рознай адлегласьці, але, як і статус, уплываюць на ваша здароўе. 
+\textbf{Сацыяльныя рэсурсы здароўя ўключаюць сацыяльны статус і сацыяльнае асяродзьдзе і ўзаемадзеяньне.} \textbf{Сацыяльны статус} складаецца з~прыбытку, прывабнасьці, адукацыі і ўплыву. \textbf{Сацыяльнае асяродзьдзе}~--- гэта людзі, якія знаходзяцца вакол вас на рознай адлегласьці, але, як і статус, уплываюць на ваша здароўе. 
 
 \emph{Гучыць страшна ці страшна цікава?}
 
@@ -540,7 +540,7 @@
 
 Пры зьніжэньні рэсурсаў здароўя аслабляецца спантаннасьць, варыябэльнасьць рэгуляцыі асноўных сыстэм. Усё становіцца аднолькавым, стэрэатыпным, паўтаральным. Гэта датычыцца як зьніжэньня варыябэльнасьці сардэчнага рытму, так і зьбядненьня слоўнікавага запасу, скарачэньня даўжыні кроку і спантаннай фізычнай актыўнасьці, зьбядненьня рухальных патэрнаў, эмацыйнага выціску і шмат чаго іншага. Гэта прыкметы зьніжэньня здароўя нават у~фармальна здаровага чалавека.
 
-\paragraph{Рэсурсы не зьяўляюцца інэртнымі.} Мы можам мабілізаваць сваю залішнюю магуту ў~выглядзе высокай працаздольнасьці, эмацыйнай стабільнасьці, увагі, сілы і розуму. Таму высокія рэсурсы здароўя~--- гэта наша штодзённае самаадчуваньне і магчымасьці. Нам трэба не «нармальнае» здароўе, а~«залішняе». Людзі з~разьвітай цяглічнай масай ня толькі мацнейшыя, але й здаравейшыя, бо цягліцы паглынаюць лішак глюкозы і тлушчу ў~крыві і абараняюць ад сардэчна-сасудзістых захворваньняў, падаўжаючы маладосьць. У спартоўцаў рызыка разьвіцьця астэапарозу значна меншая, бо да моманту старэньня і вытанчэньня шчыльнасьці касьцей іх косткі маюць большую вагу.
+\textbf{Рэсурсы не зьяўляюцца інэртнымі.} Мы можам мабілізаваць сваю залішнюю магуту ў~выглядзе высокай працаздольнасьці, эмацыйнай стабільнасьці, увагі, сілы і розуму. Таму высокія рэсурсы здароўя~--- гэта наша штодзённае самаадчуваньне і магчымасьці. Нам трэба не «нармальнае» здароўе, а~«залішняе». Людзі з~разьвітай цяглічнай масай ня толькі мацнейшыя, але й здаравейшыя, бо цягліцы паглынаюць лішак глюкозы і тлушчу ў~крыві і абараняюць ад сардэчна-сасудзістых захворваньняў, падаўжаючы маладосьць. У спартоўцаў рызыка разьвіцьця астэапарозу значна меншая, бо да моманту старэньня і вытанчэньня шчыльнасьці касьцей іх косткі маюць большую вагу.
 
 \subsection*{Кагнітыўны рэзэрв.}
 
