--- a/willpower/chapter2.tex
+++ b/willpower/chapter2.tex
@@ -20,11 +20,11 @@
 
 Дзіўна, але прычыны многіх сёньняшніх захворваньняў у~мінулым былі эвалюцыйнымі адаптацыямі, што дапамагалі выжыць. Схільнасьць пераядаць цукар дапамагала нам зьесьці лішак садавіны і назапасіць тлушч, каб перажыць зіму, а~цяпер прыводзіць да дыябэту і атлусьценьня. Стрэсавае павышэньне ўзроўню глюкозы і тлушчаў у~крыві сілкавала нашы цягліцы, калі мы ўцякалі ад небясьпекі, а~цяпер выклікае атэрасклероз. Тыя гены, якія дапамагалі нам змагацца з~інфэкцыямі і паразытамі, узмацняючы запаленчую рэакцыю, прыводзяць да росту аўтаімунных і алергічных захворваньняў. Высокі ўзровень нявызначанасьці і стрэсу сёньня вядзе да таго, што мы пачынаем есьці больш і выбіраем ежу з~больш высокай калярыйнай шчыльнасьцю, але гэта не дапамагае нам выжыць. \textbf{Тое, што працавала ў~мінулым, сёньня аказваецца проста шкодным. Мы можам прыстасавацца да чаго заўгодна, але якую цану мы заплацім за адаптацыю?}
 
-\paragraph{Тэорыя эвалюцыйнай неадпаведнасьці пацьвярджае,} што многія нашы рэакцыі выпрацаваліся для адпаведнасьці іншаму асяродзьдзю, у~якім мы эвалюцыянавалі. Наш мозг і цела не прызначаныя для доўгага сядзеньня перад экранам, для сацыяльнай ізаляцыі, для перагрузкі ежай, для хранічнага стрэсу. Мэханізмы канфлікту «гены / асяродзьдзе» аднолькавыя для любых хваробаў цывілізацыі, таму ўсе яны вылечваюцца ў~межах адзінага падыходу. Да іх адносяцца ішэмічная хвароба сэрца, цукровы дыябэт 2 тыпу, атэрасклероз, гіпэртанія, інфаркты, інсульты, дэпрэсія, акнэ, гемарой, некаторыя пухліны, алергіі і аўтаімунныя захворваньні, бессань, астэахандроз, атлусьценьне і інш.
+\textbf{Тэорыя эвалюцыйнай неадпаведнасьці пацьвярджае,} што многія нашы рэакцыі выпрацаваліся для адпаведнасьці іншаму асяродзьдзю, у~якім мы эвалюцыянавалі. Наш мозг і цела не прызначаныя для доўгага сядзеньня перад экранам, для сацыяльнай ізаляцыі, для перагрузкі ежай, для хранічнага стрэсу. Мэханізмы канфлікту «гены / асяродзьдзе» аднолькавыя для любых хваробаў цывілізацыі, таму ўсе яны вылечваюцца ў~межах адзінага падыходу. Да іх адносяцца ішэмічная хвароба сэрца, цукровы дыябэт 2 тыпу, атэрасклероз, гіпэртанія, інфаркты, інсульты, дэпрэсія, акнэ, гемарой, некаторыя пухліны, алергіі і аўтаімунныя захворваньні, бессань, астэахандроз, атлусьценьне і інш.
 
 % ((карцінка: Тэорыі неадпаведнасьці Эвалюцыйнае несупадзеньне Дэсынхрозы Дэзадаптацыя Хваробы цывілізацыі Хваробы багацьця))
 
-\paragraph{Напрыклад, у~мовах шматлікіх плямёнаў паляўнічых-зьбіральнікаў нават адсутнічаюць словы, якія абазначаюць бессань, а~падлеткі ніколі не сутыкаліся з~акнэ. Але варта перайсьці на заходні стыль харчаваньня, як тут жа зьяўляюцца высыпаньні.} Гэтыя хваробы дрэнна паддаюцца мэдыкамэнтознаму лячэньню. Сучасная мэдыцына не імкнецца вылечыць дыябэт 2 тыпу або гіпэртэнзію, а~можа толькі «кантраляваць іх». Пры атлусьценьні мэдыкамэнтозны эфэкт вельмі нязначны: напрыклад, за год лячэньня такімі прэпаратамі, як арлістат, страта вагі склала ўсяго 2,9 кг, сібутрамін~--- 4,7 кг. Пры гэтым у~«прэпаратаў ад пахуданьня» ёсьць сур'ёзныя пабочныя эфэкты і сындром адмены. Але ж, проста зьмяніўшы лад жыцьця, чалавек можа спакойна губляць 0,5--1 кг у~тыдзень.
+\textbf{Напрыклад, у~мовах шматлікіх плямёнаў паляўнічых-зьбіральнікаў нават адсутнічаюць словы, якія абазначаюць бессань, а~падлеткі ніколі не сутыкаліся з~акнэ. Але варта перайсьці на заходні стыль харчаваньня, як тут жа зьяўляюцца высыпаньні.} Гэтыя хваробы дрэнна паддаюцца мэдыкамэнтознаму лячэньню. Сучасная мэдыцына не імкнецца вылечыць дыябэт 2 тыпу або гіпэртэнзію, а~можа толькі «кантраляваць іх». Пры атлусьценьні мэдыкамэнтозны эфэкт вельмі нязначны: напрыклад, за год лячэньня такімі прэпаратамі, як арлістат, страта вагі склала ўсяго 2,9 кг, сібутрамін~--- 4,7 кг. Пры гэтым у~«прэпаратаў ад пахуданьня» ёсьць сур'ёзныя пабочныя эфэкты і сындром адмены. Але ж, проста зьмяніўшы лад жыцьця, чалавек можа спакойна губляць 0,5--1 кг у~тыдзень.
 
 Хваробы цывілізацыі забіваюць даволі павольна, але зьвязаныя з~заўчасным старэньнем, таму пагаршэньне здароўя прыводзіць да скарачэньня «маладога» часу жыцьця. Выяўляючы такія захворваньні на раньніх стадыях, можна запаволіць іх прагрэсаваньне, на позьніх жа стадыях зьмена ладу жыцьця ўжо не такая эфэктыўная.
 
@@ -102,7 +102,7 @@
 
 Саграваючыся ў~зямлянках і дамах агменем без вывадной трубы, нашы продкі дыхалі вялікай колькасьцю дыму, што вельмі шкодна ўплывала на здароўе, павялічваючы рызыку хваробаў сэрца і раку лёгкіх. Магчыма, гэта прыносіла шкоду яшчэ большую, чым паветра сучасных загазаваных гарадоў.
 
-\paragraph{Працягласьць жыцьця} людзей шмат у~чым павялічылася дзякуючы чыстай вадзе і якаснай ежы ў~дастатковай колькасьці. Цяпер усё радзей можна сутыкнуцца з~дэфіцытам калёрыяў, але пры гэтым разнастайнасьць нашай ежы значна зьнізілася. Большасьць людзей есьць меней за 20 тыпаў ежы і часьцей за ўсё ў~рафінаваным выглядзе: з~пшаніцы, соі, мяса і рысу. Для параўнаньня~--- старажытныя елі абсалютна ўсё, і гэта было каля 1000 найменьняў расьліннай і жывёльнай ежы. Бывае так, што занадта «правільны» лад жыцьця можа прывесьці да фармаваньня сур'ёзных дэфіцытаў. Напрыклад, адмаўляючыся ад гатовай ежы, солі, морапрадуктаў, можна атрымаць дэфіцыт ёду, калі жывеш у~раёнах зь яго нізкім утрыманьнем.
+\textbf{Працягласьць жыцьця} людзей шмат у~чым павялічылася дзякуючы чыстай вадзе і якаснай ежы ў~дастатковай колькасьці. Цяпер усё радзей можна сутыкнуцца з~дэфіцытам калёрыяў, але пры гэтым разнастайнасьць нашай ежы значна зьнізілася. Большасьць людзей есьць меней за 20 тыпаў ежы і часьцей за ўсё ў~рафінаваным выглядзе: з~пшаніцы, соі, мяса і рысу. Для параўнаньня~--- старажытныя елі абсалютна ўсё, і гэта было каля 1000 найменьняў расьліннай і жывёльнай ежы. Бывае так, што занадта «правільны» лад жыцьця можа прывесьці да фармаваньня сур'ёзных дэфіцытаў. Напрыклад, адмаўляючыся ад гатовай ежы, солі, морапрадуктаў, можна атрымаць дэфіцыт ёду, калі жывеш у~раёнах зь яго нізкім утрыманьнем.
 
 \subsection*{Занадта чыста.} 
 
@@ -386,7 +386,7 @@
 
 «Стэрыльны лад жыцьця» павялічвае імавернасьць хранічнага запаленьня, а~гэта ў~далейшым азначае высокую рызыку сардэчна-сасудзістых захворваньняў, дэмэнцыі, атлусьценьня. Трапляючы ў~цела, вірусы, паразіты, бактэрыі разьвіваюць супрацьзапаленчыя сеткі і павялічваюць актыўнасьць Т-рэгулятараў. Т-рэгулятары~--- гэта імунныя клеткі, якія ўмеюць стрымліваць залішнюю запаленчую рэакцыю. Такім чынам, інфэкцыі вучаць імунітэт стрымліваць сваю павышаную рэактыўнасьць.
 
-\paragraph{Вакно плястычнасьці.} Калі дзіця заразіцца вірусам Эп\-штэй\-на--Бар (вірус герпэсу~--- заўв.) у~два гады, то гэта зьніжае рызыку алергій, пасьля двух~--- ужо не. У тых, хто перахварэў на ахват да васьмі гадоў, скарачаецца імавернасьць астмы, пазьней~--- не. На працягу першых гадоў жыцьця імунная сыстэма дзіцяці праходзіць тонкую настройку, падвяргаючыся праграмаваньню пад узьдзеяньнем разнастайных антыгенаў. Вакно плястычнасьці закрываецца пасьля 5--8 гадоў. Таму бацькам важна не баяцца ўсіх бактэрыяў і вірусаў запар, а~адрозьніваць адэкватную мікробную нагрузку на прыродзе ад сапраўды небясьпечных сытуацый, накшталт знаходжаньня ў~шпіталі ці пры вялікай колькасьці людзей, у~пэрыяд успышак інфэкцыйных захворваньняў.
+\textbf{Вакно плястычнасьці.} Калі дзіця заразіцца вірусам Эп\-штэй\-на--Бар (вірус герпэсу~--- заўв.) у~два гады, то гэта зьніжае рызыку алергій, пасьля двух~--- ужо не. У тых, хто перахварэў на ахват да васьмі гадоў, скарачаецца імавернасьць астмы, пазьней~--- не. На працягу першых гадоў жыцьця імунная сыстэма дзіцяці праходзіць тонкую настройку, падвяргаючыся праграмаваньню пад узьдзеяньнем разнастайных антыгенаў. Вакно плястычнасьці закрываецца пасьля 5--8 гадоў. Таму бацькам важна не баяцца ўсіх бактэрыяў і вірусаў запар, а~адрозьніваць адэкватную мікробную нагрузку на прыродзе ад сапраўды небясьпечных сытуацый, накшталт знаходжаньня ў~шпіталі ці пры вялікай колькасьці людзей, у~пэрыяд успышак інфэкцыйных захворваньняў.
 
 \textbf{Важныя разнастайнае харчаваньне сьвежай ежай, дастатковая колькасьць прэ- і прабіётыкаў, баўленьне часу на прыродзе, кантакт з~аднагодкамі, гульні на прыродзе~--- у~гразі і пяску, кантакт з~хатнімі жывёламі, мінімальнае выкарыстаньне ў~побыце антыбактэрыяльных сродкаў.}
 
@@ -453,9 +453,9 @@
 
 \emph{Розныя спосабы актывацыі вагусу разгледжаныя ў~разьдзеле «Стрэсаўстойлівасьць».}
 
-\paragraph{Хранічнае запаленьне} зьвязанае з~павелічэньнем у~крыві празапаленчых малекулаў, у~тым ліку С-рэактыўнага бялку, ІЛ-6, ФНП, TNF, фібрынагену і шэрагу іншых маркераў. Запаленьне перабудоўвае працу клетак, выкарыстоўваючы празапаленчы рэгулятарны шлях NF-kB. Хранічнае запаленьне, як іржа, праймае наша цела і падточвае здароўе. Ёсьць меркаваньне, што павелічэньне запаленьня шчыльна зьвязанае з~працэсам старэньня (inflammaging). Больш актыўныя запаленчыя гены, больш высокія запаленчыя маркеры скарачаюць працягласьць жыцьця, а~супрацьзапаленчыя рэчывы~--- павялічваюць. Клеткі арганізма, якія старэюць і перастаюць дзяліцца, могуць пачаць выпрацоўваць шмат празапаленчых малекулаў. Навукоўцы распрацоўваюць спосабы іх ліквідацыі або перапраграмаваньня.
+\textbf{Хранічнае запаленьне} зьвязанае з~павелічэньнем у~крыві празапаленчых малекулаў, у~тым ліку С-рэактыўнага бялку, ІЛ-6, ФНП, TNF, фібрынагену і шэрагу іншых маркераў. Запаленьне перабудоўвае працу клетак, выкарыстоўваючы празапаленчы рэгулятарны шлях NF-kB. Хранічнае запаленьне, як іржа, праймае наша цела і падточвае здароўе. Ёсьць меркаваньне, што павелічэньне запаленьня шчыльна зьвязанае з~працэсам старэньня (inflammaging). Больш актыўныя запаленчыя гены, больш высокія запаленчыя маркеры скарачаюць працягласьць жыцьця, а~супрацьзапаленчыя рэчывы~--- павялічваюць. Клеткі арганізма, якія старэюць і перастаюць дзяліцца, могуць пачаць выпрацоўваць шмат празапаленчых малекулаў. Навукоўцы распрацоўваюць спосабы іх ліквідацыі або перапраграмаваньня.
 
-\paragraph{Харчаваньне і атлусьценьне.} Узмацняе запаленьне і рознае клеткавае «сьмецьце», клеткавыя і малекулярныя пашкоджаньні ў~тканках у~выніку, напрыклад, глікацыі (калі падвышаны ўзровень глюкозы ў~крыві прымушае яе незваротна зьвязвацца з~нашымі клеткамі) або ўтварэньня сшывак. Чым больш пашкоджаньняў, тым мацней мяняецца імунагеннасьць нашых тканак, што выклікае запаленчую рэакцыю арганізма. Папулярным робіцца бодыпазітыў у~дачыненьні да лішняй вагі, калі людзі намаўляюць сябе, што гэта нармальна. Але ж лішні тлушч~--- гэта крыніца хранічнага запаленьня, і чалавек як быццам гарыць. Яго хочуць выратаваць, а~ён кажа, што гэта не небясьпечна.
+\textbf{Харчаваньне і атлусьценьне.} Узмацняе запаленьне і рознае клеткавае «сьмецьце», клеткавыя і малекулярныя пашкоджаньні ў~тканках у~выніку, напрыклад, глікацыі (калі падвышаны ўзровень глюкозы ў~крыві прымушае яе незваротна зьвязвацца з~нашымі клеткамі) або ўтварэньня сшывак. Чым больш пашкоджаньняў, тым мацней мяняецца імунагеннасьць нашых тканак, што выклікае запаленчую рэакцыю арганізма. Папулярным робіцца бодыпазітыў у~дачыненьні да лішняй вагі, калі людзі намаўляюць сябе, што гэта нармальна. Але ж лішні тлушч~--- гэта крыніца хранічнага запаленьня, і чалавек як быццам гарыць. Яго хочуць выратаваць, а~ён кажа, што гэта не небясьпечна.
 
 \tipbox{Прадукты харчаваньня могуць валодаць як празапаленчымі, так і супрацьзапаленчымі ўласьцівасьцямі. Напрыклад, у~ягадах і гародніне шмат прыродных саліцылатаў, якія зьніжаюць запаленьне гэтак жа, як зьніжаюць запаленьне і асьпірын, і аліўкавы алей першага адціску. А вось рафінаваныя вугляводы, перапрацаванае мяса, цукар узмацняюць запаленьне.}
 
@@ -465,7 +465,7 @@
 
 Таму нядзіўна, што ступень цяжкасьці дэпрэсіі і біпалярнага разладу карэлююць з~узроўнем С-рэактыўнага бялку ў~крыві. Зьніжэньне хранічнага запаленьня дабратворнае для мозгу. Ведаць узровень запаленьня важна, бо гэта гаворыць і пра іншыя рызыкі. Напрыклад, павышаны халестэрын пры павышаным СРБ нашмат небясьпечнейшы, чым яго больш высокі ўзровень, але пры нармальным СРБ. Для зьніжэньня запаленьня важна саніраваць усе магчымыя агмені хранічнай інфэкцыі: інфэкцыі зубоў і ротавай поласьці, вушныя інфэкцыі, мочапалавыя, гастрыты і да т.~п.
 
-\paragraph{Бар'еры.} Адна з~умоваў здаровага функцыянаваньня арганізма~--- гэта падтрыманьне вонкавых і ўнутраных бар'ераў. Чым менш бар'ераў, тым мацнейшымі могуць быць парушэньні нашага здароўя і хутчэйшым старэньне. І тут значэньне маюць ня толькі ўнутраныя бар'еры, але і стан скуры! Па меры сталеньня чалавека скура становіцца больш сухой і менш трывалай. А гэта вядзе да ўтварэньня мікратрэшчынаў і пашкоджаньняў. На пашкоджаньні арганізм адказвае звыкла~--- празапаленчай рэакцыяй і павелічэньнем сінтэзу празапаленчых цытакінаў. А паколькі плошча скуры досыць вялікая, дык гэта аказвае сыстэмны эфэкт.
+\textbf{Бар'еры.} Адна з~умоваў здаровага функцыянаваньня арганізма~--- гэта падтрыманьне вонкавых і ўнутраных бар'ераў. Чым менш бар'ераў, тым мацнейшымі могуць быць парушэньні нашага здароўя і хутчэйшым старэньне. І тут значэньне маюць ня толькі ўнутраныя бар'еры, але і стан скуры! Па меры сталеньня чалавека скура становіцца больш сухой і менш трывалай. А гэта вядзе да ўтварэньня мікратрэшчынаў і пашкоджаньняў. На пашкоджаньні арганізм адказвае звыкла~--- празапаленчай рэакцыяй і павелічэньнем сінтэзу празапаленчых цытакінаў. А паколькі плошча скуры досыць вялікая, дык гэта аказвае сыстэмны эфэкт.
 
 \emph{У дасьледаваньні (зь невялікай выбаркай) вывучаўся ўплыў элемэнтарнага ўвільгатненьня скуры за ўсё цела ў~пажылых звычайным крэмам двойчы на дзень. Высьветлася, што за гэты час узровень інтэрлейкін-1 бэта, інтэрлейкін-6 і фактар нэкрозу пухліны альфа зьнізіліся, прычым узровень інтэрлейкіну-1 бэта і інтэрлейкіну-6 зьнізіўся да ўзроўню трыццацігадовых.}
 
@@ -517,7 +517,7 @@
 
 Падобная гісторыя адбылася з~алькаголем. Мы навучыліся яго засвойваць не ад добрага жыцьця, а~ад неабходнасьці, каб выжыць, есьці нават тую садавіну, якая ўпала і забрадзіла. 10 мільёнаў гадоў таму ў~агульнага продка чалавека і вышэйшых малпаў адбылася мутацыя ў~гене алькагольдэгідрагеназе, што ў~40 разоў павялічыла хуткасьць расшчапленьня этанолу. Дзякуючы гэтаму нашы продкі былі ў~стане ня толькі зьесьці забрадзілую садавіну, але й вярнуцца назад на дрэва. Цукар і алькаголь увогуле маюць надзіва шмат агульнага. Па-першае, у~прыродзе мы атрымлівалі іх з~аднаго прадукту~--- садавіны, сасьпелай і забрадзілай. Па-другое, цукар і алькаголь выклікаюць аднолькавыя праблемы ў~печані і правакуюць інсулінарэзістэнтнасьць. Па-трэцяе, залежнасьць ад алькаголю і салодкага зьвязаная з~адным і тым жа аддзелам галаўнога мозгу. Ну і нарэшце, цукар і алькаголь аднолькава зьніжаюць сілу волі, вядуць да дэпрэсіі і выгараньня.
 
-\paragraph{Рафініраваньне і перапрацоўка прадуктаў} заўважна ўплываюць на тое, як яны дзейнічаюць на наш арганізм. Напрыклад, яблык і яблычны сок узьдзейнічаюць па-рознаму. Сок, здробнены і без харчовых валокнаў, хутка праходзіць праз страўнік як вадкасьць ды інтэнсіўна ўсмоктваецца, выклікаючы моцны гарманальны водгук і пікавую канцэнтрацыю цукру. Цьвёрды яблык затрымліваецца ў~страўніку, стравуецца плыўна, клятчатка запавольвае ўсмоктваньне цукру, і засваеньне праходзіць мякчэй і карысьней. \textbf{Сок шкодзіць, а~суцэльны фрукт~--- не.}
+\textbf{Рафініраваньне і перапрацоўка прадуктаў} заўважна ўплываюць на тое, як яны дзейнічаюць на наш арганізм. Напрыклад, яблык і яблычны сок узьдзейнічаюць па-рознаму. Сок, здробнены і без харчовых валокнаў, хутка праходзіць праз страўнік як вадкасьць ды інтэнсіўна ўсмоктваецца, выклікаючы моцны гарманальны водгук і пікавую канцэнтрацыю цукру. Цьвёрды яблык затрымліваецца ў~страўніку, стравуецца плыўна, клятчатка запавольвае ўсмоктваньне цукру, і засваеньне праходзіць мякчэй і карысьней. \textbf{Сок шкодзіць, а~суцэльны фрукт~--- не.}
 
 Значэньне мае і тып вугляводаў. Цяпер людзі ядуць шмат мучнога і крупаў. Такія канцэнтраваныя вугляводы з~высокай глікемічнай нагрузкай рэзка павялічваюць узровень глюкозы, выклікаюць запаленчую рэакцыю ў~кішачніку. Частае і залішняе ўжываньне ў~ежу такіх вугляводаў зьмяншае адчувальнасьць да інсуліну, што павялічвае рызыку запаленьня, дэпрэсіі, дыябэту. \emph{Найбольш высокае ўжываньне такіх вугляводаў павялічвае рызыку сьмерці на 30\,\% пры параўнаньні з~найболей нізкім.}
 
@@ -645,7 +645,7 @@
 
 \emph{Навукоўцы нават вывелі мышэй з~паніжаным дафамінам у~сеткавіцы, у~якіх разьвівалася міяпія без усялякага напружанага чытаньня.}
 
-\paragraph{Дык што ж рабіць?} У экспэрыментах 40-хвілінная актыўнасьць па-за школай прывяла да зьніжэньня колькасьці хворых на блізарукасьць на 25\,\% на працягу трох гадоў. Гульні на сьвежым паветры ня менш за тры гадзіны ў~дзень~--- гэта найлепшы навуковы спосаб прафіляктыкі блізарукасьці і запаволеньня яе разьвіцьця. 
+\textbf{Дык што ж рабіць?} У экспэрыментах 40-хвілінная актыўнасьць па-за школай прывяла да зьніжэньня колькасьці хворых на блізарукасьць на 25\,\% на працягу трох гадоў. Гульні на сьвежым паветры ня менш за тры гадзіны ў~дзень~--- гэта найлепшы навуковы спосаб прафіляктыкі блізарукасьці і запаволеньня яе разьвіцьця. 
 
 \emph{«Міяпія перастане прагрэсаваць, калі вы адправіцеся ў~марское падарожжа»,~--- пісаў у~пачатку XX стагодзьдзя брытанскі афтальмоляг Генры Эдвард Джулер.}
 
@@ -657,7 +657,7 @@
 
 \textbf{У любым узросьце важна карміць свой мозг якаснай «ежай», якая «здабываецца» з~дапамогай добрага зроку і слыху, рэгулярнага руху і разнастайных прыемных узьдзеяньняў на цела. І я буду рэгулярна нагадваць вам пра гэта.}
 
-\paragraph{Корміце мозг.} Важна падтрымліваць у~добрым стане і іншыя органы пачуцьцяў. Аслабленьне нюху з~узростам~--- часты сымптом раньніх стадый нэўрадэгенэратыўных захворваньняў, іх яшчэ можна эфэктыўна спыніць на гэтым этапе. Пагаршэньне нюху падвойвае рызыку дэменцыі ў~бліжэйшыя 5 гадоў. А вось у~пацыентаў у~коме аднаўленьне нюху~--- гэта добрая прагнастычная прыкмета. Можна палепшыць нюх: трэнаваць яго, лячыць рынасінусіты; ёсьць і шэраг экспэрымэнтальных спосабаў, ад інтраназальнага інсуліну да ствалавых клетак. Трэніроўка нюху ня толькі паляпшае здольнасьць адрозьніваць пахі, але й стымулюе глябальныя працэсы нэўраплястычнасьці. Дасьледаваньні паказваюць, што трэніроўка нюху паляпшае вэрбальныя здольнасьці мацней, чым, скажам, рашэньне судоку.
+\textbf{Корміце мозг.} Важна падтрымліваць у~добрым стане і іншыя органы пачуцьцяў. Аслабленьне нюху з~узростам~--- часты сымптом раньніх стадый нэўрадэгенэратыўных захворваньняў, іх яшчэ можна эфэктыўна спыніць на гэтым этапе. Пагаршэньне нюху падвойвае рызыку дэменцыі ў~бліжэйшыя 5 гадоў. А вось у~пацыентаў у~коме аднаўленьне нюху~--- гэта добрая прагнастычная прыкмета. Можна палепшыць нюх: трэнаваць яго, лячыць рынасінусіты; ёсьць і шэраг экспэрымэнтальных спосабаў, ад інтраназальнага інсуліну да ствалавых клетак. Трэніроўка нюху ня толькі паляпшае здольнасьць адрозьніваць пахі, але й стымулюе глябальныя працэсы нэўраплястычнасьці. Дасьледаваньні паказваюць, што трэніроўка нюху паляпшае вэрбальныя здольнасьці мацней, чым, скажам, рашэньне судоку.
 
 \subsection*{Пытаньні і заданьні}
 
