--- a/willpower/chapter3.tex
+++ b/willpower/chapter3.tex
@@ -28,7 +28,7 @@
 
 У фізыцы ёсьць цікавая тэорыя пад назвай «эфэкт назіральніка». Яна пра тое, што простае назіраньне за зьявай або сыстэмай ужо здольнае паўплываць на гэтую зьяву або сыстэму. Са здароўем гэтак жа: калі мы проста пачынаем адсочваць любы свой паказьнік здароўя, ён мае тэндэнцыю паляпшацца, нават калі мы яшчэ нічога не рабілі для яго паляпшэньня.
 
-\paragraph{Кантроль паказьнікаў паляпшае іх.} У жыцьці чалавека ёсьць тры галоўныя рэсурсы: час, грошы і ўвага. Увага~--- гэта своеасаблівае ўгнаеньне для росту новых звычак: дзе ўвага, там энэргія, куды вы гледзіце, тое і паляпшаецца. Калі перастаць зьвяртаць на нешта ўвагу, аўтаматычная звычка да чаго яшчэ не пасьпела выпрацавацца, то паказьнікі пагоршацца. Таму, чым часьцей вы надаяце ўвагу якаму-небудзь аспэкту здароўя, тым лепей. \textbf{Але, калі ласка, бяз крайнасьцяў~--- прыцягненьне ўвагі павінна быць спантанным, гульнявым: прымус сябе да дзеяньня выкліча агіду і абурэньне, але ані не жаданьне займацца гэтым.}
+\textbf{Кантроль паказьнікаў паляпшае іх.} У жыцьці чалавека ёсьць тры галоўныя рэсурсы: час, грошы і ўвага. Увага~--- гэта своеасаблівае ўгнаеньне для росту новых звычак: дзе ўвага, там энэргія, куды вы гледзіце, тое і паляпшаецца. Калі перастаць зьвяртаць на нешта ўвагу, аўтаматычная звычка да чаго яшчэ не пасьпела выпрацавацца, то паказьнікі пагоршацца. Таму, чым часьцей вы надаяце ўвагу якаму-небудзь аспэкту здароўя, тым лепей. \textbf{Але, калі ласка, бяз крайнасьцяў~--- прыцягненьне ўвагі павінна быць спантанным, гульнявым: прымус сябе да дзеяньня выкліча агіду і абурэньне, але ані не жаданьне займацца гэтым.}
 
 Рэгулярнае вымярэньне само па сабе ўжо закладвае ланцужок звычкі~--- рабіць нешта кожны дзень. Выкарыстоўваючы гэты сфармаваны патэрн~--- вымярэньне,~--- будзе нашмат прасьцей дадаць і дзеяньне. Чаму так? Магчыма, уся справа ў~зваротнай сувязі. Мы ж ня проста адзначаем лічбы, наш мозг заўсёды імкнецца іх растлумачыць, выявіць прычынна-выніковыя сувязі. Мы пачынаем шукаць заканамернасьці ў~ваганьнях паказьнікаў, аналізаваць тое, што адбываецца ў~паўсядзённым жыцьці, у~пошуках адказаў на гэтыя пытаньні. Усё гэта вядзе да таго, што паводзіны зьмяняюцца аўтаматычна, нават без мэтанакіраваных валявых намаганьняў. 
 
@@ -337,7 +337,7 @@
 
 Чым меншая скорасьць~--- тым меншая рызыка зрыву. Важна паступова павялічваць нагрузку, паэтапна скідаць вагу. Напрыклад, бясьпечная хуткасьць пахуданьня вар'юецца ў~значэньнях 500--1000 грамаў на тыдзень. Чым больш чалавек губляе вагі, тым вышэйшая рызыка адкату і ўскладненьняў~--- ад парушэньня харчовых паводзінаў да тлушчавага гепатозу печані.
 
-\paragraph{Залатая сярэдзіна здароўя~---} гэта балянс паміж адсутнасьцю якога-небудзь клопату пра здароўе і апантанасьцю ім. Прынцып «больш~--- значыць лепш» тут не працуе. Практычна для ўсіх рэсурсаў здароўя існуе U-падобная сувязь паміж колькасьцю намаганьняў і атрыманай карысьцю. Гэта значыць, што больш~--- гэта часьцяком шкода. Напрыклад, дасьледаваньні выявілі U-падобную сувязь паміж бегам і сьмяротнасьцю: ёсьць верхняя мяжа карысьці і фізычнай актыўнасьці. Залішняя актыўнасьць можа зьмяншаць узровень тэстастэрону, парушаць мэнструальны цыкль, прыгнятаць імунітэт.
+\textbf{Залатая сярэдзіна здароўя~---} гэта балянс паміж адсутнасьцю якога-небудзь клопату пра здароўе і апантанасьцю ім. Прынцып «больш~--- значыць лепш» тут не працуе. Практычна для ўсіх рэсурсаў здароўя існуе U-падобная сувязь паміж колькасьцю намаганьняў і атрыманай карысьцю. Гэта значыць, што больш~--- гэта часьцяком шкода. Напрыклад, дасьледаваньні выявілі U-падобную сувязь паміж бегам і сьмяротнасьцю: ёсьць верхняя мяжа карысьці і фізычнай актыўнасьці. Залішняя актыўнасьць можа зьмяншаць узровень тэстастэрону, парушаць мэнструальны цыкль, прыгнятаць імунітэт.
 
 % ((карысьць для здароўя U-крывая карысьць-якасьць павелічэньне стымулу))
 
