--- a/willpower/chapter5.tex
+++ b/willpower/chapter5.tex
@@ -87,7 +87,7 @@
 
 \textbf{Сярэдняй актыўнасьці недастаткова: у~людзей, якія рухаюцца «ўмерана», рызыка дэпрэсіі на 25\,\% вышэйшая ў~параўнаньні з~тымі, хто актыўна займаецца спортам.}
 
-\paragraph{Аздаравіце свае гены.} Фізычная актыўнасьць аздараўляе ня толькі звонку, але і знутры: зьніжае ўзровень хранічнага запаленьня, а~таксама актывуе многія карысныя для здароўя гены і рэгулятарныя каскады, напрыклад AMPK, што зьніжае залішнюю «дзейнасьць» ужо вядомага нам mTOR і стымулюе аўтафагію.
+\textbf{Аздаравіце свае гены.} Фізычная актыўнасьць аздараўляе ня толькі звонку, але і знутры: зьніжае ўзровень хранічнага запаленьня, а~таксама актывуе многія карысныя для здароўя гены і рэгулятарныя каскады, напрыклад AMPK, што зьніжае залішнюю «дзейнасьць» ужо вядомага нам mTOR і стымулюе аўтафагію.
 
 \emph{У адным з~дасьледаваньняў менавіта фізычная актыўнасьць змагла павысіць экспрэсію некалькіх сотняў ахоўных генаў. Іншыя навукоўцы вывучалі эпігенэтычны ўплыў спорту на актыўнасьць генаў: удзельнікаў прымушалі круціць пэдалі велатрэнажора адной нагой цэлыя тры месяцы. Дзіўнае заданьне, але яно дапамагло выключыць уплыў іншых чыньнікаў. Высьветлілася, што цягліцы на назе зьмяніліся ў~пяці тысячах пунктаў, акрамя таго спорт уплываў на актыўнасьць 175 генаў у~клетках сэрца, прымушаючы іх больш актыўна аднаўляцца і расьці.}
 
